# kaka-robot

./: .env.example  .gitignore  KAKA_HANDOFF.md  KAKA_V2_HANDOFF.md  README.md  卡咔-v2-电子生命系统设计文档.md  卡咔电子生命系统设计文档.md
apps/desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-pet/src-tauri/capabilities/: default.json
apps/desktop-pet/src-tauri/icons/: icon.icns
apps/desktop-pet/src-tauri/src/: lib.rs  main.rs
apps/qq-adapter/: bot.py  pyproject.toml
apps/qq-adapter/src/qq_adapter/: __init__.py  actions.py  api.py  config.py  core_client.py  pipeline.py  qq_event.py  sender.py  trigger.py
apps/qq-adapter/tests/: test_actions.py  test_config.py  test_core_client.py  test_nonebot_kaka_chat.py  test_pipeline.py  test_proactive_send_api.py  test_qq_event.py
services/kaka-core/: pyproject.toml  run.py
services/kaka-core/scripts/: README.md  analyze_inputs.py  manage_memories.py  merge_memory_candidates.py  review_memory_candidates.py  search_memories.py  seed_memory_e2e_data.py  show_memories.py  show_memory_candidates.py  show_recent_conversations.py
services/kaka-core/src/kaka_core/: __init__.py
services/kaka-core/tests/: test_admin_api.py  test_analyze_inputs.py  test_api.py  test_auto_analysis.py  test_auto_review.py  test_chat_service.py  test_database.py  test_desktop_operations.py  test_doctor.py  test_e2e_desktop_operations.py  test_llm_client.py  test_manage_memories.py  test_merge_memory_candidates.py  test_notifications.py  test_persona_prompt.py  test_plugins.py  test_relationship_context.py  test_review_memory_candidates.py  test_search_memories.py  test_seed_memory_e2e_data.py  test_settings.py  test_show_memories.py  test_show_memory_candidates.py  test_show_recent_conversations.py
(+139 files in other folders)
