[project]
name = "qq-adapter"
version = "0.1.0"
description = "QQ adapter for 卡咔."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "kaka-protocol",
  "nonebot-adapter-onebot>=2.4,<3",
  "nonebot2[fastapi]>=2.4,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
