[package]
name = "kaka-desktop-pet"
version = "0.1.0"
description = "Desktop pet body for Kaka."
authors = ["Kaka Project"]
edition = "2021"

[lib]
name = "kaka_desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
